# pyvelocity

./: .bumpversion.cfg  .gitignore  CLAUDE.md  Dockerfile  MANIFEST.in  Pipfile  README.md  compose.yml  docker-compose.yml  pyproject.toml  setup.py  tasks.py
.claude/: settings.json
.devcontainer/: compose.yml  devcontainer.json  docker-compose.yml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: analyze.yml  codeql-analysis.yml  codeql.yml  deploy.yml  test.yml
docs/: CONTRIBUTING.md
pyvelocity/: __init__.py  cli.py  constants.py
pyvelocity/checks/: __init__.py  aggregation.py  badges.py  classifiers.py  keywords.py  legacy_setup_files.py  line_length.py  readme.py  requires_python.py  typed.py  using_py_project_toml.py  zip_safe_false.py
pyvelocity/configurations/: __init__.py  aggregation.py
pyvelocity/configurations/files/: __init__.py  aggregation.py  py_project_toml.py  readme.py  setup_cfg.py
pyvelocity/configurations/files/sections/: __init__.py  black.py  docformatter.py  factory.py  flake8.py  isort.py  project.py  pyvelocity.py  ruff.py  setuptools.py
pyvelocity/configurations/files/sections/pylint/: __init__.py
pyvelocity/configurations/tools/: __init__.py  black.py  docformatter.py  flake8.py  isort.py  pylint.py  pyvelocity.py  ruff.py
pyvelocity/regex/: __init__.py  github.py  markdown.py  pypi.py  qlty.py  shieldsio.py
tests/: __init__.py  conftest.py  test_cli.py
tests/checks/: __init__.py  test_aggregation.py  test_badges.py  test_classifiers.py  test_keywords.py  test_legacy_setup_files.py  test_readme.py  test_requires_python.py  test_typed.py  test_zip_safe_false.py
tests/configurations/files/: __init__.py  test_readme.py
tests/configurations/files/sections/: __init__.py  test___init__.py  test_factory.py  test_project.py
tests/configurations/files/sections/pylint/: __init__.py  test___init__.py
tests/configurations/tools/: __init__.py  test_pylint.py  test_ruff.py
tests/testresources/: pyproject_classifier_invalid_requires_python.toml  pyproject_classifier_mismatch_extra.toml  pyproject_classifier_mismatch_missing.toml  pyproject_classifier_missing_requires_python.toml  pyproject_classifier_non_list.toml  pyproject_error.toml  pyproject_keywords_empty.toml  pyproject_keywords_invalid_type.toml  pyproject_keywords_missing.toml  pyproject_no_project.toml  pyproject_python_missing_classifiers.toml  pyproject_python_missing_requires.toml  pyproject_python_old_classifiers.toml  pyproject_python_old_requires.toml  pyproject_python_success.toml  pyproject_readme_missing.toml  pyproject_readme_wrong.toml  pyproject_requires_python_no_ge.toml  pyproject_ruff.toml  pyproject_ruff_underscore.toml  pyproject_setuptools_missing.toml  pyproject_setuptools_zip_safe_false.toml  pyproject_setuptools_zip_safe_missing.toml  pyproject_setuptools_zip_safe_true.toml  pyproject_success.toml  pyproject_success_cli.toml  pyproject_typed_missing_classifier.toml  pyproject_typed_missing_package_data.toml  pyproject_typed_non_dict_package_data.toml  pyproject_typed_success.toml  pyproject_typed_wrong_package_data.toml  setup_error.cfg  setup_pylint.cfg
